Adding unit integration test + equalsHashcode method for objects in lists + some refactoring